Update dependencies, and remove add-opens (no longer needed due to JavaCPP).